--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-particles",
   "version": "1.0.2",
   "description": "A simple particle system for NodeJs",
-  "main": "index.js",
+  "main": "./js/ParticleSystem.js",
   "directories": {
     "test": "tests"
   },
