--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-particles",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A simple particle system for NodeJs",
   "main": "./js/ParticleSystem.js",
   "directories": {
@@ -36,6 +36,5 @@
   "engines": {
     "node": ">=0.10.15"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
