--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-particles",
-  "version": "1.1",
+  "version": "1.0.8",
   "description": "A simple particle system for NodeJs",
   "main": "./js/ParticleSystem.js",
   "directories": {
@@ -31,8 +31,7 @@
     "coveralls": "^2.11.6",
     "istanbul": "^0.4.2",
     "mocha": "2.4.5",
-    "docco": "0.7",
-    "chai": "^3.5.0"
+    "docco": "0.7"
   },
   "engines": {
     "node": ">=0.10.15"
