Remove useless deps

--- a/package.json
+++ b/package.json
@@ -28,16 +28,14 @@
   },
   "readmeFilename": "README.md",
   "devDependencies": {
-    "coveralls": "^2.11.6",
-    "istanbul": "^0.4.2",
-    "mocha": "2.4.5",
+    "chai": "^3.5.0",
+    "coveralls": "^3.0.2",
     "docco": "0.7",
-    "chai": "^3.5.0"
+    "istanbul": "^0.4.2",
+    "mocha": "^5.2.0"
   },
   "engines": {
     "node": ">=0.10.15"
   },
-  "dependencies": {
-    "chai": "^3.5.0"
-  }
+  "dependencies": {}
 }
